# responses-completions-shim

./: Dockerfile  Dockerfile.mock  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  mock_upstream.py
app/auth/: bearer.py
app/clients/: upstream_chat_client.py
app/domain/: canonical.py  mapper_canonical_to_chat.py  mapper_chat_to_responses.py  mapper_responses_to_canonical.py  response_store.py  streaming_adapter.py
app/routes/: health.py  models.py  responses.py
app/utils/: errors.py  ids.py
docs/: docker-compose.md
tests/: test_responses.py
